add a DocumentPermission model and GET/PUT routes for "../team" to access it
